gcc/testsuite/g++.dg/cpp/warning-directive-2.C
// { dg-do preprocess }
// { dg-options "-fdiagnostics-show-option -Werror=cpp" }

#warning "Printed"  // { dg-error "\"Printed\" .-Wcpp." }
